--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html {
 #login-view {
     width: 100%;
     height: 100%;
-    background: #0d001a url('https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&q=80&w=2070') no-repeat center center;
+    background: #0078d7 url('https://images.unsplash.com/photo-1510519133417-c81409b13f5d?q=80&w=2000&auto=format&fit=crop') no-repeat center center;
     background-size: cover;
     display: flex;
     align-items: center;
@@ -27,7 +27,7 @@ html {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: #111 url('https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2000&auto=format&fit=crop') no-repeat center center;
+    background: #0078d7 url('https://images.unsplash.com/photo-1510519133417-c81409b13f5d?q=80&w=2000&auto=format&fit=crop') no-repeat center center;
     background-size: cover;
     z-index: 10000;
     color: #fff;
@@ -226,7 +226,7 @@ html {
 #ana-masaustu {
     width: 100%;
     height: 100%;
-    background: url('https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&q=80&w=2070') no-repeat center center;
+    background: #0078d7 url('https://images.unsplash.com/photo-1510519133417-c81409b13f5d?q=80&w=2000&auto=format&fit=crop') no-repeat center center;
     background-size: cover;
     position: relative;
     display: none;
